force-app/main/default/objects/Account/fields/AbacusAccountNr__c.field-meta.xml
<CustomField>
    <fullName>AbacusAccountNr__c</fullName>
    <formula>IF(
ISBLANK( PrintPlusId__c ),SUBSTITUTE(AccountNrSkywalk__c,&quot;A-&quot;,&quot;&quot;) , PrintPlusId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Account Nr.</label>
    <type>Text</type>
</CustomField>