force-app/main/default/objects/Account/fields/AbacusDebtor__c.field-meta.xml
<CustomField>
    <fullName>AbacusDebtor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abacus Debtor</label>
    <type>Checkbox</type>
</CustomField>