force-app/main/default/objects/Account/fields/AbacusEmployeeCredtor__c.field-meta.xml
<CustomField>
    <fullName>AbacusEmployeeCredtor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abacus Employee Credtor</label>
    <type>Checkbox</type>
</CustomField>