force-app/main/default/objects/Account/fields/AbacusNgSyncTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>AbacusNgSyncTimeStamp__c</fullName>
    <description>Timestamp of the last successful synchronization of this Account to AbacusNG. Used to detect records changed since the last sync.</description>
    <label>AbacusNG Sync TimeStamp</label>
    <type>DateTime</type>
</CustomField>