force-app/main/default/objects/Account/fields/AbacusSupplier__c.field-meta.xml
<CustomField>
    <fullName>AbacusSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abacus Supplier</label>
    <type>Checkbox</type>
</CustomField>