force-app/main/default/objects/Account/fields/AccountLanguage__c.field-meta.xml
<CustomField>
    <fullName>AccountLanguage__c</fullName>
    <label>Account Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
                <default>true</default>
                <label>D</label>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>