force-app/main/default/objects/Account/fields/AccountManager__c.field-meta.xml
<CustomField>
    <fullName>AccountManager__c</fullName>
    <label>Account Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>