force-app/main/default/objects/Account/fields/AccountNameShort__c.field-meta.xml
<CustomField>
    <fullName>AccountNameShort__c</fullName>
    <label>Account Name (Short)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>