force-app/main/default/objects/Account/fields/AccountNr__c.field-meta.xml
<CustomField>
    <fullName>AccountNr__c</fullName>
    <description>20170415, ary, Feld wird nicht mehr verwendet, ist aber noch in einer Apex Klasse drin und kann daher nicht gelöscht werden.</description>
    <displayFormat>{000000}</displayFormat>
    <label>Account Nr. - do not use</label>
    <type>AutoNumber</type>
</CustomField>