force-app/main/default/objects/Account/fields/AccountNrSkywalk__c.field-meta.xml
<CustomField>
    <fullName>AccountNrSkywalk__c</fullName>
    <displayFormat>A-{000000}</displayFormat>
    <label>Account Nr.</label>
    <type>AutoNumber</type>
</CustomField>