force-app/main/default/objects/Account/fields/AccountStandardProjectRateHour__c.field-meta.xml
<CustomField>
    <fullName>AccountStandardProjectRateHour__c</fullName>
    <label>Account Standard Project Rate (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>