force-app/main/default/objects/Account/fields/AccountTypeIcon__c.field-meta.xml
<CustomField>
    <fullName>AccountTypeIcon__c</fullName>
    <formula>IF( 
OR(
ISPICKVAL(LegalNature__c,&quot;Natural Entity (Private Person)&quot;),
ISPICKVAL(LegalNature__c,&quot;Individual Company&quot;)
)
,IMAGE(&quot;/resource/1496927364000/icon_account_private&quot;,&quot;Account Type&quot;), 
IMAGE(&quot;/resource/1496926966000/icon_account_company&quot;,&quot;Account Type&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>