force-app/main/default/objects/Account/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please select the Checkbox if the Account is an Agency.</inlineHelpText>
    <label>Agency</label>
    <type>Checkbox</type>
</CustomField>