force-app/main/default/objects/Account/fields/BillingAddressLine3__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressLine3__c</fullName>
    <description>ACHTUNG: Field Label und API Name stimmen nicht überein. Grund sind aufwändige Trigger- und Schnittstellenanpassungen bei API Namenswechsel. lgu 12.11.2014</description>
    <label>Billing Address Addition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>