force-app/main/default/objects/Account/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <label>Billing City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>