force-app/main/default/objects/Account/fields/BillingPoBox__c.field-meta.xml
<CustomField>
    <fullName>BillingPoBox__c</fullName>
    <label>Billing PO Box</label>
    <length>50</length>
    <type>Text</type>
</CustomField>