force-app/main/default/objects/Account/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <label>Billing State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>