force-app/main/default/objects/Account/fields/BillingStreetNr__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetNr__c</fullName>
    <label>Billing Street, Nr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>