force-app/main/default/objects/Account/fields/BillingZip__c.field-meta.xml
<CustomField>
    <fullName>BillingZip__c</fullName>
    <label>Billing ZIP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>