force-app/main/default/objects/Account/fields/ContactAddressUpdateFromAccount__c.field-meta.xml
<CustomField>
    <fullName>ContactAddressUpdateFromAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If clicked, all Contacts are updated with this Accounts Location Address.</inlineHelpText>
    <label>Contact Address Update From Account</label>
    <type>Checkbox</type>
</CustomField>