force-app/main/default/objects/Account/fields/CurrencyInfo__c.field-meta.xml
<CustomField>
    <fullName>CurrencyInfo__c</fullName>
    <formula>TEXT (CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Info</label>
    <type>Text</type>
</CustomField>