force-app/main/default/objects/Account/fields/CustomerActual__c.field-meta.xml
<CustomField>
    <fullName>CustomerActual__c</fullName>
    <label>Customer (Actual)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>