force-app/main/default/objects/Account/fields/Deputy__c.field-meta.xml
<CustomField>
    <fullName>Deputy__c</fullName>
    <description>Wird nur noch durch den UR Trigger von einer Löschung verhindert. 26.03.2016, ary</description>
    <label>Deputy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>