force-app/main/default/objects/Account/fields/ESRMergentNr__c.field-meta.xml
<CustomField>
    <fullName>ESRMergentNr__c</fullName>
    <label>ESR Mergent Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>