force-app/main/default/objects/Account/fields/ExtendedInformation__c.field-meta.xml
<CustomField>
    <fullName>ExtendedInformation__c</fullName>
    <label>Extended Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>