force-app/main/default/objects/Account/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>