force-app/main/default/objects/Account/fields/Freelancer__c.field-meta.xml
<CustomField>
    <fullName>Freelancer__c</fullName>
    <inlineHelpText>This field can only be edited by the Finance Department.</inlineHelpText>
    <label>Freelancer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Freelancer Registered</fullName>
            </value>
            <value>
                <fullName>Freelancer Not Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>