force-app/main/default/objects/Account/fields/Hide__c.field-meta.xml
<CustomField>
    <fullName>Hide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Feld aus Layout ausgeblendet. Nach der Datenpflege wurden alle verbleibenden Hide = True wieder auf False gesetzt. Feld kann gelegentlich gelöscht werden. 07.11.2014, ary</description>
    <label>Hide</label>
    <type>Checkbox</type>
</CustomField>