force-app/main/default/objects/Account/fields/HideReason__c.field-meta.xml
<CustomField>
    <fullName>HideReason__c</fullName>
    <description>Feld aus Layout ausgeblendet. Nach der Datenpflege wurden alle verbleibenden Hide = True wieder auf False gesetzt. Feld kann gelegentlich gelöscht werden. 07.11.2014, ary</description>
    <label>Hide Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Liquidation of the Business</fullName>
            </value>
            <value>
                <fullName>Not Relevant (Manually)</fullName>
            </value>
            <value>
                <fullName>Print Plus Non Relevant</fullName>
            </value>
            <value>
                <fullName>Duplicate (Internal Account)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>