force-app/main/default/objects/Account/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select Inactive if you know the Account does not exist anymore (e.g. Liquidated).</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>