force-app/main/default/objects/Account/fields/Inactive_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Owner__c</fullName>
    <formula>NOT(Owner.IsActive)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Owner</label>
    <type>Checkbox</type>
</CustomField>