force-app/main/default/objects/Account/fields/LastInvoiceNr__c.field-meta.xml
<CustomField>
    <fullName>LastInvoiceNr__c</fullName>
    <label>Last Invoice Nr.</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>