force-app/main/default/objects/Account/fields/LegalCode__c.field-meta.xml
<CustomField>
    <fullName>LegalCode__c</fullName>
    <label>Legal Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>