force-app/main/default/objects/Account/fields/LegalFromZefix__c.field-meta.xml
<CustomField>
    <fullName>LegalFromZefix__c</fullName>
    <description>18.12.2017, ary: Migrationsfeld</description>
    <label>Legal From Zefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>