force-app/main/default/objects/Account/fields/LegalNature__c.field-meta.xml
<CustomField>
    <fullName>LegalNature__c</fullName>
    <label>Legal Nature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation / Limited Company</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Association / Foundation</fullName>
            </value>
            <value>
                <fullName>Individual Company</fullName>
            </value>
            <value>
                <fullName>Natural Entity (Private Person)</fullName>
            </value>
            <value>
                <fullName>Public Administration / Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>