force-app/main/default/objects/Account/fields/LegalShort__c.field-meta.xml
<CustomField>
    <fullName>LegalShort__c</fullName>
    <label>Legal Short</label>
    <length>10</length>
    <type>Text</type>
</CustomField>