force-app/main/default/objects/Account/fields/LocationCity__c.field-meta.xml
<CustomField>
    <fullName>LocationCity__c</fullName>
    <label>Location City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>