force-app/main/default/objects/Account/fields/LocationPoBox__c.field-meta.xml
<CustomField>
    <fullName>LocationPoBox__c</fullName>
    <label>Location PO Box</label>
    <length>50</length>
    <type>Text</type>
</CustomField>