force-app/main/default/objects/Account/fields/LocationState__c.field-meta.xml
<CustomField>
    <fullName>LocationState__c</fullName>
    <label>Location State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>