force-app/main/default/objects/Account/fields/LocationStreetNr__c.field-meta.xml
<CustomField>
    <fullName>LocationStreetNr__c</fullName>
    <label>Location Street, Nr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>