force-app/main/default/objects/Account/fields/LocationZip__c.field-meta.xml
<CustomField>
    <fullName>LocationZip__c</fullName>
    <label>Location ZIP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>