force-app/main/default/objects/Account/fields/NumberOfUnitRelations__c.field-meta.xml
<CustomField>
    <fullName>NumberOfUnitRelations__c</fullName>
    <label>Number of Unit Relations</label>
    <summaryForeignKey>UnitRelation__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>