force-app/main/default/objects/Account/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>