force-app/main/default/objects/Account/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please select the Checkbox if you think this account is a Premium Account. Premium defines the high class segment the firm is working in.</inlineHelpText>
    <label>Premium</label>
    <type>Checkbox</type>
</CustomField>