force-app/main/default/objects/Account/fields/PrintPlusId__c.field-meta.xml
<CustomField>
    <fullName>PrintPlusId__c</fullName>
    <description>14.12.2017, ary: Feld stammt noch aus der Zeit der ersten Phase mit Synchronisation PrintPlus und wird nicht mehr produktiv verwendet.</description>
    <externalId>true</externalId>
    <label>Print Plus ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>