force-app/main/default/objects/Account/fields/PrintPlusIDMultiPicklist__c.field-meta.xml
<CustomField>
    <fullName>PrintPlusIDMultiPicklist__c</fullName>
    <description>14.12.2017, ary: Feld stammt noch aus der Zeit der ersten Phase mit Synchronisation PrintPlus und wird nicht mehr produktiv verwendet.</description>
    <label>Print Plus ID (Multi Picklist)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>no value</fullName>
            </value>
            <value>
                <fullName>25972</fullName>
            </value>
            <value>
                <fullName>11375</fullName>
            </value>
            <value>
                <fullName>25795</fullName>
            </value>
            <value>
                <fullName>23254</fullName>
            </value>
            <value>
                <fullName>13085</fullName>
            </value>
            <value>
                <fullName>20825</fullName>
            </value>
            <value>
                <fullName>23224</fullName>
            </value>
            <value>
                <fullName>14454</fullName>
            </value>
            <value>
                <fullName>13204</fullName>
            </value>
            <value>
                <fullName>27887</fullName>
            </value>
            <value>
                <fullName>24376</fullName>
            </value>
            <value>
                <fullName>20390</fullName>
            </value>
            <value>
                <fullName>28007</fullName>
            </value>
            <value>
                <fullName>21166</fullName>
            </value>
            <value>
                <fullName>22568</fullName>
            </value>
            <value>
                <fullName>25064</fullName>
            </value>
            <value>
                <fullName>25687</fullName>
            </value>
            <value>
                <fullName>24695</fullName>
            </value>
            <value>
                <fullName>17406</fullName>
            </value>
            <value>
                <fullName>21655</fullName>
            </value>
            <value>
                <fullName>19077</fullName>
            </value>
            <value>
                <fullName>27407</fullName>
            </value>
            <value>
                <fullName>29908</fullName>
            </value>
            <value>
                <fullName>17674</fullName>
            </value>
            <value>
                <fullName>30858</fullName>
            </value>
            <value>
                <fullName>11365</fullName>
            </value>
            <value>
                <fullName>25103</fullName>
            </value>
            <value>
                <fullName>11933</fullName>
            </value>
            <value>
                <fullName>21934</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>