force-app/main/default/objects/Account/fields/PrintPlusLastSync__c.field-meta.xml
<CustomField>
    <fullName>PrintPlusLastSync__c</fullName>
    <description>14.12.2017, ary: Feld stammt noch aus der Zeit der ersten Phase mit Synchronisation PrintPlus und wird nicht mehr produktiv verwendet.</description>
    <label>Print Plus Last Sync</label>
    <type>DateTime</type>
</CustomField>