force-app/main/default/objects/Account/fields/PrintPlusStatus__c.field-meta.xml
<CustomField>
    <fullName>PrintPlusStatus__c</fullName>
    <description>14.12.2017, ary: Feld stammt noch aus der Zeit der ersten Phase mit Synchronisation PrintPlus und wird nicht mehr produktiv verwendet.</description>
    <label>Print Plus Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>