force-app/main/default/objects/Account/fields/PrintPlusSync__c.field-meta.xml
<CustomField>
    <fullName>PrintPlusSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>14.12.2017, ary: Feld stammt noch aus der Zeit der ersten Phase mit Synchronisation PrintPlus und wird nicht mehr produktiv verwendet.</description>
    <label>Print Plus Sync</label>
    <type>Checkbox</type>
</CustomField>