force-app/main/default/objects/Account/fields/PrintPlusUpdateFlag__c.field-meta.xml
<CustomField>
    <fullName>PrintPlusUpdateFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>14.12.2017, ary: Feld stammt noch aus der Zeit der ersten Phase mit Synchronisation PrintPlus und wird nicht mehr produktiv verwendet.</description>
    <label>Print Plus Update Flag</label>
    <type>Checkbox</type>
</CustomField>