force-app/main/default/objects/Account/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>IF(
 AND(
ZImportTimeStamp__c=&quot;13.4.2017 00:00:00&quot;,
ZImportSource__c =&quot;PrintPlus&quot;
),
IMAGE(&quot;/resource/1492347261000/migration_red&quot;, 
&quot;Migration PP&quot;),

IF(
 ZImportSource__c =&quot;Abacus&quot;,
IMAGE(&quot;/resource/1490794124000/icon_abacus15&quot;,&quot;Migration Abacus&quot;),
&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>